k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-demo-svc
spec:
  selector:
    app: portfolio-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
