k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-demo-ingress
spec:
  rules:
    - host: k3s-demo.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-demo-svc
                port:
                  number: 80
